Use milliseconds not nanoseconds. Also change data structure.